tests/negative/generics/const_fn_mismatch_type.orng
// const_fn_mismatch_type.orng:11:24: error: expected a value of type `Int`, got a value of type `Float`
//     let x: template(4.0, 4.0) = ('1', '2', '3', '4')
//                       ^
// 
fn template(const n: Int, x: Int) -> Type {
    _ = x
    [n]Char
}

fn main() -> Char {
    let x: template(4.0, 4.0) = ('1', '2', '3', '4')
    x[3]
}
